refactor final boss components and guard animation frame access